Ajout affichage dinamique

--- a/templates/cadre_photo/index.html.twig
+++ b/templates/cadre_photo/index.html.twig
@@ -102,7 +102,7 @@
 
 		<div class="quadro">
 			<img src="https://falkon.click/image/quadro/suportParede.jpg" alt="Quadro Pi 4G">
-			<h3>Quadro Rústico Pi 4G - Personalizado</h3>
+			<h3>Quadro Rústico Full HD Pi 4G - Personalizado</h3>
 			<p>- fixação parede/plafond</p>
 			<p>Systema (4 GB)</p>
 			<p>Suporte VESA + parafusos</p>
@@ -119,7 +119,7 @@
 			<select id="tipoQuadro" class="form-control">
 				<option disabled selected value="">-- selecione --</option>
 				<option value="moderno" data-preco="299">Quadro Moderno 4K Pi 8G - €299</option>
-				<option value="rustico" data-preco="249">Quadro Rústico Pi 4G - €249</option>
+				<option value="rustico" data-preco="249">Quadro Rústico Full HD Pi 4G - €249</option>
 			</select>
 		</div>
 
