Ajout affichage prix et optmization

--- a/templates/cadre_photo/index.html.twig
+++ b/templates/cadre_photo/index.html.twig
@@ -7,8 +7,13 @@
 	<style>
 		h1 {
 			text-align: center;
-			margin-bottom: 30px;
+			margin-bottom: 3px;
 		}
+        h2 {
+			text-align: center;
+			margin-bottom: 3px;
+		}
+
 		body {
 			background: #f7f7f7;
 		}
