Ajout affichage prix et optmization

--- a/templates/cadre_photo/index.html.twig
+++ b/templates/cadre_photo/index.html.twig
@@ -102,7 +102,7 @@
 			<p>Cabo HDMI 2 m + fonte 5 V/5 A</p>
 			<p>Caixa + dissipador</p>
 			<p>Suporte VESA + parafusos</p>
-			<p class="preco">€299,00</p>
+			{# <p class="preco">€299,00</p> #}
 		</div>
 
 		<div class="quadro">
@@ -112,7 +112,7 @@
 			<p>Systema (4 GB)</p>
 			<p>Suporte VESA + parafusos</p>
 			<p>Caixa + fonte + cabos</p>
-			<p class="preco">€249,00</p>
+			{# <p class="preco">€249,00</p> #}
 		</div>
 	</div>
 
@@ -123,8 +123,8 @@
 			<label for="tipoQuadro">Tipo de Quadro:</label>
 			<select id="tipoQuadro" class="form-control">
 				<option disabled selected value="">-- selecione --</option>
-				<option value="moderno" data-preco="299">Quadro Moderno 4K Pi 8G - €299</option>
-				<option value="rustico" data-preco="249">Quadro Rústico Full HD Pi 4G - €249</option>
+				<option value="moderno" data-preco="299">Moderno 4K Pi 8G - €299</option>
+				<option value="rustico" data-preco="249">Rústico Full HD Pi 4G - €249</option>
 			</select>
 		</div>
 
@@ -147,7 +147,7 @@
 		</div>
 
 		<div class="form-group">
-			<label>Aplicativo Móvel Integrado:</label><br>
+			<label>Aplicativo Móvel (Personalizavel) Integrado:</label><br>
 			<input type="radio" name="appMovel" value="sim" data-preco="300" checked>
 			Sim (+ €300)<br>
 			<input type="radio" name="appMovel" value="nao" data-preco="0">
