--- a/templates/cadre_photo/index.html.twig
+++ b/templates/cadre_photo/index.html.twig
@@ -147,7 +147,7 @@
 		</div>
 
 		<div class="form-group">
-			<label>Aplicativo Móvel (Personalizavel) Integrado:</label><br>
+			<label>Aplicativo Móvel (Personalizado) Integrado:</label><br>
 			<input type="radio" name="appMovel" value="sim" data-preco="300" checked>
 			Sim (+ €300)<br>
 			<input type="radio" name="appMovel" value="nao" data-preco="0">
