--- a/templates/home_page/app_presentation.html.twig
+++ b/templates/home_page/app_presentation.html.twig
@@ -64,6 +64,7 @@
 					<span>Download APK</span>
 				</a>
 			</h1>
+			<p>Play Store : (Imuhotepuvideos)</p>
 
 			<img
 			src="{{ asset('/image/imuvideos/banner.png') }}" alt="Bannière de l'application" class="main-image">
